styles.css
*, *::after, *::before {
  box-sizing: border-box;
}

:root {
  --cell-size: 160px;
  --item-size: calc(var(--cell-size) * 0.9);
  --border-size: 2px;
}

body {
  margin: 0;
}

.row {
  float: inline-start;
  padding: 10px;
}

.left, .right {
  width: 25%;
}

.middle {
  width: 50%;
}

.game:after {
  content: "";
  /* display: table; */
  clear: both;
}

/* responsive column layout */
@media screen and (max-width: 1000px) {
  .row {
    width: 100%;
  }
}

.board {
  display: grid;
  justify-content: center;
  align-content: center;
  justify-items: center;
  align-items: center;
  grid-template-columns: repeat(3, auto);
}

.cell {
  height: var(--cell-size);
  width: var(--cell-size);
  border: solid var(--border-size) black;
  background: white;
  /* for items in grid */
  display: flex;
  justify-content: center;
  align-items: center;
}

/* to remove grid borders */
.cell:first-child,
.cell:nth-child(2),
.cell:nth-child(3) {
  border-top: none;
}
.cell:nth-child(3n+1) {
  border-left: none;
}
.cell:nth-child(3n+3) {
  border-right: none;
}
.cell:last-child,
.cell:nth-child(8),
.cell:nth-child(7) {
  border-bottom: none;
}

.piece {
  padding: var(--border-size);
  border: var(--border-size) solid white;
  border-radius: calc(var(--item-size) * 2);
  height: var(--item-size);
  width: var(--item-size);
}

.dragging {
  opacity: 0.5;
  border: solid var(--border-size) black;
}

.red-hovering {
  background: pink;
}

.blue-hovering {
  background: cornflowerblue;
}

/* restart page */
.winning-message {
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0,0,0, .9);

  /* button and text*/
  justify-content: center;
  align-items: center;
  color: white;
  font-size: 5rem;
  flex-direction: column;
}

.winning-message button {
  font-size: 3rem;
  background-color: white;
  border: 1px solid black;
  padding: .25em .5em;
  cursor: pointer;
}
.winning-message button:hover {
  background-color: black;
  color: white;
  border-color: white;
}
.winning-message.show {
  display: flex;
}

